[gd_scene load_steps=29 format=3 uid="uid://dfkxs2skxx5ru"]

[ext_resource type="Script" path="res://overworld/characters/generic_gamepiece.gd" id="1_6sn36"]
[ext_resource type="Texture2D" uid="uid://13h6vtkjx4sb" path="res://player/player_base_move.png" id="2_0lols"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1cr0"]
size = Vector2(16, 16)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bulbt"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bf78p"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qsq55"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c8phb"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_k4c3o"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bulbt")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_bf78p")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_qsq55")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_c8phb")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_spd45"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dcshb"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jx6id"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8af56"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_c6xtp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_spd45")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_dcshb")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_jx6id")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_8af56")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5o20c"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hbwi7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_npxpe"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wral1"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_k4c3o")
states/Idle/position = Vector2(375.691, 55)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_c6xtp")
states/Walk/position = Vector2(529.691, 72)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_5o20c"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_hbwi7"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_npxpe")]
graph_offset = Vector2(56.6913, 0)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_2e05x"]

[sub_resource type="Animation" id="Animation_fpk54"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_o5n5i"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ux8mh"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="Animation" id="Animation_vyuyn"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_p5dyi"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_0vs8l"]
resource_name = "walk_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_wyrpb"]
resource_name = "walk_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_m3mcy"]
resource_name = "walk_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_t5jui"]
resource_name = "walk_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GFX/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kp116"]
_data = {
"RESET": SubResource("Animation_fpk54"),
"idle_down": SubResource("Animation_o5n5i"),
"idle_left": SubResource("Animation_ux8mh"),
"idle_right": SubResource("Animation_vyuyn"),
"idle_up": SubResource("Animation_p5dyi"),
"walk_down": SubResource("Animation_0vs8l"),
"walk_left": SubResource("Animation_wyrpb"),
"walk_right": SubResource("Animation_m3mcy"),
"walk_up": SubResource("Animation_t5jui")
}

[node name="Gamepiece" type="Area2D"]
script = ExtResource("1_6sn36")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_v1cr0")

[node name="DoorRayCast2D" type="RayCast2D" parent="Collision"]
target_position = Vector2(0, 8)
collision_mask = 0

[node name="BlockingRayCast2D" type="RayCast2D" parent="Collision"]
target_position = Vector2(0, 8)
collision_mask = 3

[node name="LedgeRayCast2D" type="RayCast2D" parent="Collision"]
target_position = Vector2(0, 8)
collision_mask = 0

[node name="GFX" type="Marker2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="GFX"]

[node name="Sprite" type="Sprite2D" parent="GFX"]
position = Vector2(8, 0)
texture = ExtResource("2_0lols")
hframes = 7
vframes = 4
frame = 7

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_wral1")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_2e05x")
parameters/Idle/blend_position = Vector2(0, 1)
parameters/Walk/blend_position = Vector2(0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kp116")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
